# tagbase_server/tagbase_server/openapi/openapi.yaml
@@ -23,14 +23,16 @@ servers:
 tags:
 - description: Operations relating to the ingestion of data into tagbase-server.
   name: ingest
+- description: Operations for querying tags ingested into Tagbase.
+  name: tag
 paths:
   /ingest:
     get:
-      description: Ingest a network-accessible file.
-      operationId: ingest_etuff_get
+      description: Get network accessible file and execute ingestion
+      operationId: ingest_get
       parameters:
-      - description: Location of a network accessible (file, ftp, http, https)
-          file e.g. 'file:///usr/src/app/data/eTUFF-sailfish-117259.txt'
+      - description: Location of a network accessible (file, ftp, http, https) file
+          e.g. 'file:///usr/src/app/data/eTUFF-sailfish-117259.txt'
         explode: true
         in: query
         name: file
@@ -41,7 +43,18 @@ paths:
           pattern: ^(?!\s*$).+
           type: string
         style: form
-      - $ref: '#/components/parameters/type'
+      - description: Type of file to be ingested, defaults to 'etuff'
+        explode: true
+        in: query
+        name: type
+        required: false
+        schema:
+          default: etuff
+          enum:
+          - etuff
+          - netcdf
+          type: string
+        style: form
       responses:
         "200":
           content:
@@ -55,15 +68,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/Response500'
           description: Internal tagbase-server error. Contact admin detailed in openapi.yaml.
-      summary: Get eTUFF file and execute ingestion
+      summary: Get network accessible file and execute ingestion
       tags:
       - ingest
       x-openapi-router-controller: tagbase_server.controllers.ingest_controller
     post:
-      description: POST an eTUFF file and perform a ingest operation.
-      operationId: ingest_etuff_post
+      description: POST a local file and perform a ingest operation
+      operationId: ingest_post
       parameters:
-      - $ref: '#/components/parameters/type'
+      - description: Type of file to be ingested, defaults to 'etuff'
+        explode: true
+        in: query
+        name: type
+        required: false
+        schema:
+          default: etuff
+          enum:
+          - etuff
+          - netcdf
+          type: string
+        style: form
       requestBody:
         content:
           text/plain:
@@ -86,11 +110,62 @@ paths:
               schema:
                 $ref: '#/components/schemas/Response500'
           description: Internal tagbase-server error. Contact admin detailed in openapi.yaml.
-      summary: POST an eTUFF file and perform a ingest operation
+      summary: POST a local file and perform a ingest operation
       tags:
       - ingest
       x-codegen-request-body-name: etuff_body
       x-openapi-router-controller: tagbase_server.controllers.ingest_controller
+  /tag:
+    get:
+      description: Get information about all tags
+      operationId: list_tags
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response200'
+          description: A success message confirming ingestion.
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response500'
+          description: Internal tagbase-server error. Contact admin detailed in openapi.yaml.
+      summary: Get information about all tags
+      tags:
+      - tag
+      x-openapi-router-controller: tagbase_server.controllers.tag_controller
+  /tag/{tag_id}:
+    get:
+      description: Get information about an individual tag
+      operationId: get_tag
+      parameters:
+      - description: submission id for an existing tag
+        explode: false
+        in: path
+        name: tag_id
+        required: true
+        schema:
+          type: number
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response200'
+          description: A success message confirming ingestion.
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response500'
+          description: Internal tagbase-server error. Contact admin detailed in openapi.yaml.
+      summary: Get information about an individual tag
+      tags:
+      - tag
+      x-openapi-router-controller: tagbase_server.controllers.tag_controller
 components:
   parameters:
     type:
@@ -102,8 +177,8 @@ components:
       schema:
         default: etuff
         enum:
-          - etuff
-          - netcdf
+        - etuff
+        - netcdf
         type: string
       style: form
   schemas:
@@ -111,7 +186,7 @@ components:
       description: HTTP 200 success response
       example:
         code: "200"
-        elapsed: '0:00:58.506691'
+        elapsed: 0:00:58.506691
         message: Data file eTUFF-sailfish-117259.txt successfully ingested into Tagbase
           DB.
       properties:
